# bsl_collision_avoidance

./: CMakeLists.txt  README.md  package.xml
config/: ca.sh  laser1.txt  laser2.txt
include/: systemProperties.txt
launch/: MRS6000.launch  MRS6000_ns.launch  calibration.launch  collisionAvoidance.launch  record.launch  simulation.launch  simulation_ca.launch  simulation_ns.launch  transforms.launch
msg/: TopicFailure.msg  TransformStampedArray.msg
scripts/: calibration_listener.py  calibration_talker.py  digital_IO.py  failure_output.py  initialise_LIDAR_transform.py  laser_angle_broadcaster.py  laser_angle_listener.py  laser_angle_talker.py  object_detection.py  occupancy_grid_creation.py  system_shutoff.py  tf2_laser_angle_broadcaster.py  tf2_laser_angle_calibrator.py  topic_watch_dog.py
src/: occupancy_grid_creation.cpp
urdf/: CTA.urdf
