<?xml version="1.0"?>
<package format="2">
  <name>bsl_collision_avoidance</name>
  <version>0.0.0</version>
  <description>The bsl_collision_avoidance package</description>

  <maintainer email="Nathan.Jones@pacificaluminium.com.au">Nathan Jones</maintainer>

  <license>BSL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>sick_scan</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>topic_tools</depend>
  <depend>rviz</depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
